@/features/Live/pages/List fix overflow

--- a/src/features/Live/pages/List/styles.module.scss
+++ b/src/features/Live/pages/List/styles.module.scss
@@ -1,6 +1,7 @@
 @import '@/theme/include.scss';
 
 .wrapper {
+  overflow-x: clip;
   position: relative;
 }
 
